@@ -66,72 +66,6 @@ AffineCongealingFunctional
 }
 
 void
-AffineCongealingFunctional::InitializeXforms
-( const bool alignCenters, const bool alignCenterOfMass, const bool initScales )
-{
-  const size_t numberOfImages = this->m_ImageVector.size();
-
-  const Vector3D centerTemplate = this->m_TemplateGrid->GetCenterCropRegion();
-  
-  std::vector<Vector3D> firstOrderMoments;
-  if ( initScales )
-    firstOrderMoments.resize( numberOfImages );
-
-  this->m_XformVector.resize( numberOfImages );
-  for ( size_t imageIdx = 0; imageIdx < numberOfImages; ++imageIdx )
-    {
-    AffineXform::SmartPtr xform( new AffineXform );
-    xform->SetNumberDOFs( this->m_XformNumberDOFs );
-    xform->SetUseLogScaleFactors( true );
-    xform->SetCenter( centerTemplate.begin() );
-    this->m_XformVector[imageIdx] = Xform::SmartPtr::DynamicCastFrom( xform );
- 
-    if ( alignCenters )
-      {
-      Vector3D center;
-      
-      if ( alignCenterOfMass )
-	{
-	if ( initScales )
-	  {
-	  center = this->m_OriginalImageVector[imageIdx]->GetCenterOfMass( firstOrderMoments[imageIdx] );
-	  }
-	else
-	  {
-	  center = this->m_OriginalImageVector[imageIdx]->GetCenterOfMass();
-	  }
-	}
-      else
-	{
-	center = this->m_ImageVector[imageIdx]->GetCenter();
-	}
-
-      center -= centerTemplate;
-      this->GetXformByIndex( imageIdx )->SetXlate( center.begin() );
-      }
-    }
-
-  // convert first order moments to scale with average log factor 0
-  if ( initScales )
-    {
-    Vector3D avgScales( 0, 0, 0 );
-    Vector3D fom0( firstOrderMoments[0] );
-    for ( size_t imageIdx = 0; imageIdx < numberOfImages; ++imageIdx )
-      {
-      for ( int dim = 0; dim < 3; ++dim )
-	firstOrderMoments[imageIdx][dim] = log( firstOrderMoments[imageIdx][dim] / fom0[dim] );
-      avgScales += firstOrderMoments[imageIdx];
-      }
-    avgScales *= ( 1.0 /  numberOfImages );
-    for ( size_t imageIdx = 0; imageIdx < numberOfImages; ++imageIdx )
-      {
-      firstOrderMoments[imageIdx] -= avgScales;
-      this->GetXformByIndex( imageIdx )->SetScales( firstOrderMoments[imageIdx].begin() );
-      }
-    }
-}
-
-void
 AffineCongealingFunctional::SetXforms
 ( const std::vector<AffineXform::SmartPtr>& xformVector )
 {
